# matrix-calculator

./: .gitignore  CMakeLists.txt  LICENSE  finite.h  main.cpp  matrix.h  parser.h  rational.h
include/: biginteger.h  complex.h  finite.h  matrix.h  parser.h  polynom.h  rational.h
src/: biginteger.cpp  complex.cpp  main.cpp  matrix.cpp  parser.cpp  polynom.cpp  rational.cpp
